@@ -417,7 +417,7 @@ X = FOREACH B GENERATE COUNT_STAR(A);
    </section>
     </section>
   
-    <!-- ++++++++++++++++++++++++++++++++++++++++++++++ --> 
+   <!-- ++++++++++++++++++++++++++++++++++++++++++++++ --> 
    <section id="diff">
    <title>DIFF</title>
    <p>Compares two fields in a tuple.</p>
@@ -480,7 +480,6 @@ grunt> dump x;
 ({(6,7),(2,2)})
 </source>
    </section></section>
-
 
   <!-- ++++++++++++++++++++++++++++++++++++++++++++++ -->   
 <section id="isempty">
@@ -895,6 +894,66 @@ DUMP X;
             </td>
          </tr> 
    </table></section></section>
+
+   <!-- ++++++++++++++++++++++++++++++++++++++++++++++ --> 
+   <section id="subtract">
+   <title>SUBTRACT</title>
+   <p>Bags subtraction, SUBTRACT(bag1, bag2) = bags composed of bag1 elements not in bag2</p>
+   
+   <section>
+   <title>Syntax</title>
+   <table>
+      <tr>
+         <td>
+            <p>SUBTRACT(expression, expression)</p>
+         </td>
+      </tr> 
+   </table></section>
+   
+   <section>
+   <title>Terms</title>
+   <table>
+      <tr>
+         <td>
+            <p>expression</p>
+         </td>
+         <td>
+            <p>An expression with data type bag.</p>
+         </td>
+      </tr> 
+   </table>
+   </section>
+   
+   <section>
+   <title>Usage</title>
+   <p>SUBTRACT takes two bags as arguments and returns a new bag composed of the tuples of first bag are not in the second bag.</p> 
+   <p>If null, bag arguments are replaced by empty bags.<br></br>If arguments are not bags, an IOException is thrown.</p>
+   <p>The implementation assumes that both bags being passed to the SUBTRACT function will fit <strong>entirely 
+   into memory</strong> simultaneously, if this is not the case, SUBTRACT will still function but will be <strong>very</strong> slow.</p>
+   </section>
+   
+   <section>
+   <title>Example</title>
+   <p>In this example, SUBTRACT creates a new bag composed of B1 elements that are not in B2.</p>
+<source>
+A = LOAD 'bag_data' AS (B1:bag{T1:tuple(t1:int,t2:int)},B2:bag{T2:tuple(f1:int,f2:int)});
+
+DUMP A;
+({(8,9),(0,1),(1,2)},{(8,9),(1,1)})
+({(2,3),(4,5)},{(2,3),(4,5)})
+({(6,7),(3,7),(3,7)},{(2,2),(3,7)})
+
+DESCRIBE A;
+A: {B1: {T1: (t1: int,t2: int)},B2: {T2: (f1: int,f2: int)}}
+
+X = FOREACH A GENERATE SUBTRACT(B1,B2);
+
+DUMP X;
+({(0,1),(1,2)})
+({})
+({(6,7)})
+</source>
+   </section></section>
 
 
   <!-- ++++++++++++++++++++++++++++++++++++++++++++++ -->   
